# aixlog

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md  aixlog_example.cpp  aixlog_fmt_example.cpp  aixlog_test.cpp  build_android.sh
.github/workflows/: ci.yml  ubuntu.yml  windows.yml
examples/: aixlog_fmt_example.cpp
include/: aixlog.h  aixlog.hpp
include/aixlog/: aixlog.hpp  filter.hpp  metadata.hpp
include/aixlog/sinks/: sink_android.hpp  sink_base.hpp  sink_callback.hpp  sink_cerr.hpp  sink_cout.hpp  sink_eventlog.hpp  sink_file.hpp  sink_format.hpp  sink_native.hpp  sink_null.hpp  sink_output_debug_string.hpp  sink_syslog.hpp  sink_unified_logging.hpp
